--- a/books.html
+++ b/books.html
@@ -6,6 +6,17 @@
         <title>Book Library</title>
     </head>
     <body>
-        <button id="newbook-btn">New Book</button>
+        <button id="new-book-btn">New Book</button>
+        <form id="new-book-form" style="display: none;">
+            <label for="title">Title:</label>
+            <input type="text" id="title">
+            <label for="author">Author:</label>
+            <input type="text" id="author">
+            <label for="pages">Pages:</label>
+            <input type="text" id="pages">
+            <label for="read">Read:</label>
+            <input type="checkbox" id="read">
+            <input type="submit" value="Add Book">
+        </form>
     </body>
 </html>
