--- a/books.html
+++ b/books.html
@@ -18,5 +18,6 @@
             <input type="checkbox" id="read">
             <input type="submit" value="Add Book">
         </form>
+        <div id="library"></div>
     </body>
 </html>
